# SGR-Kernel-R7

./: .env.example  .gitattributes  .gitignore  Dockerfile  KERNEL_SPEC.md  LICENSE  README.md  README_RU.md  RELEASE.md  SKILL_DEVELOPMENT.md  docker-compose.indexer.yml  docker-compose.yml  main.py  manual_start.py  mock_editor.py  populate_rag.py  prepare_github.ps1  pyproject.toml  pytest.ini  requirements.txt  run_worker.py  server.py  test_code_interpreter.py  test_logic_rl.py  test_logic_rl_hard.py  test_memory.py  test_office_gen.py  test_rlm_docker.py  test_sgr.py  test_stages_1_to_7.py  ui_app.py  verify_metadata.py  verify_server.py
core/: artifacts.py  checkpoints.py  critic.py  dag_executor.py  database.py  decision.py  dispatcher.py  engine.py  execution.py  governance.py  lifecycle.py  llm.py  logger.py  memory.py  memory_manager.py  middleware.py  models.py  planner.py  policy.py  policy_graph.py  registry.py  reliability.py  repair.py  replay.py  result.py  router.py  sandbox.py  security.py  skill_interface.py  state.py  summarizer.py  telemetry.py  telemetry_decision.py  telemetry_kernel.py  trace.py  types.py  validator.py  voice.py
docs/: EDUCATIONAL_GUIDE.md  agent_protocol_arch.drawio.xml  agent_protocol_spec.md  architecture.md  artifact_store.md  deployment.md  design_decisions.md  distributed_execution.md  execution_model.md  experiment_spec.md  lifecycle.md  reliability.md  replay_model.md  reproducibility.md  research_protocols.md  run_minimal_experiment.md  security_model.md  skill_contract.md  skill_development.md  system_design_story.md  (+1 more)
(+131 files in other folders)
