[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgr-kernel"
version = "0.2.0"
description = "Schema-Guided Reasoning Kernel (RFC v2 Reference Implementation)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Antigravity Team", email = "antigravity@google.com"}
]
keywords = ["agent", "kernel", "sgr", "rfc-v2", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
sgr-kernel = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["core", "interfaces", "skills"]
